tests/NormalTests/paczka1/fuzzy1/98178718.err
Error in line 8: Rwm5A5K S390 36,4
Error in line 16: Rwm5A5K A876 77,5
Error in line 21: A513 A513 0,7
Error in line 25: A513 S390 89,8
Error in line 27: LxZam6 A513 44,5
